syntax = "proto3";

package KestrelCore;

enum CommandType {

  None = 0;

  HeartBeat = 1;

  HeartBeatReply = 2;

  Register = 3;

  RegisterReply = 4;

  Login = 5;

  LoginReply = 6;

  AddOrder = 7;

  AddOrderReply = 8;

  Hello = 9;

  Rpc = 10;

  RpcReply = 11;
}

enum ErrorCode{
  Unknown = 0;
  Package = 1;
}

message CommandMessage
{
  CommandType key = 1;

  uint32 identifier = 2;

  bool successFul = 3;

  ErrorCode errorCode = 4;

  string errorMessage = 5;

  bytes content = 6;

  CommandType rpcKey = 7;
}

message LoginMessageRequest {
  string username = 1;

  string password = 2;

  string email = 3;
}

message LoginMessageReply {
  string token = 1;
}
